src/objects/Equipment_Return__c.object
<CustomObject>
    <description>Parent object that contains the meta data about an individual return of some equipment from the field</description>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The asset that the return is for if it is not a phone return</description>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Equipment Returns</relationshipLabel>
        <relationshipName>Equipment_Returns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <description>The date that the issue was closed</description>
        <label>Date Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Equipment_Type__c</fullName>
        <description>The type of equipment that has been returned</description>
        <label>Equipment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laptop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field_Officer_Assement__c</fullName>
        <label>Field Officer Assement</label>
        <picklist>
            <picklistValues>
                <fullName>Dead Battery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken Screen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss of Screen Sensitivity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does Not Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CKW Pulse broken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CKW Search broken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CKW Surveys broken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MM Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ReadySet cannot pick power from Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ReadySet ports do not work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ReadySet makes noise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken Panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Field_Officer_Comments__c</fullName>
        <label>Field Officer Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field officer who first reported the issue</description>
        <label>Field Officer</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Equipment Returns (Field Officer)</relationshipLabel>
        <relationshipName>Equipment_Returns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Handset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The handset that is being returned</description>
        <inlineHelpText>Enter the handset that is being returned</inlineHelpText>
        <label>Handset</label>
        <referenceTo>Phone__c</referenceTo>
        <relationshipLabel>Equipment Returns</relationshipLabel>
        <relationshipName>Equipment_Returns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Incoming - with FO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inhouse - with Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated - with MTN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated - with Fenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outgoing - with FO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With CKW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With Staff</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <description>The date that the equipment started to be returned to the office</description>
        <label>Open Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person in the office who received the equipment from the field</description>
        <label>Received By</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Equipment Returns (Received By)</relationshipLabel>
        <relationshipName>Equipment_Returns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the return</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tech_Assesment__c</fullName>
        <label>Tech Assesment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tech_Team_Comments__c</fullName>
        <label>Tech Team Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Equipment Return</label>
    <nameField>
        <label>Equipment Return Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equipment Returns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>